--- a/estilos.css
+++ b/estilos.css
@@ -30,7 +30,11 @@ body {
 
 .slides img {
 	
-	width:100%;
+	
+	width: 1700px;
+	height:600px;
+	#1450
+	#1040px
 	
 }
 
@@ -74,13 +78,25 @@ body {
 	color:#fff;
 	text-decoration:none;
 	display:inline-block;
-	padding:13.5px  20px;
+	padding:10px  20px;
 	float:right;
 	
 }
 
-slidesjs-navigation {
+.slides h1 {
 	
-	
-	
+	text-color:#fff;
+	color:#fff;
+    text-align: center;
+   font-size:60px;
+   opacity: 0.5;
+   position: absolute;
+    top: 150px;
+   left: 0;
+   width: 100%;
+   font-family:Berlin Sans FB Demi, Book Antiqua;
+# font-size: 100px;
+ ##<img src="https://www.imageupload.co.uk/images/2017/05/01/evaluacion.jpg" alt="" >
+ #bottom:25px;
+ #top --> mas pixeles baja , menos sube 
 }
