--- a/estilos.css
+++ b/estilos.css
@@ -18,6 +18,7 @@ body {
 	
 	width=100%;
 	max-width:1000px;
+	box-sizing:border-box;
 	
 }
 
@@ -30,6 +31,7 @@ body {
 
 .slides {
 	width:100%;
+	box-sizing:border-box;
 	
 	
 }
@@ -39,7 +41,8 @@ body {
 	
 	
 	width: 1000px;
-	height:700px;
+	#height:700px;
+	box-sizing:border-box;
 	#1450
 	#1040px
 	
