--- a/estilos.css
+++ b/estilos.css
@@ -26,12 +26,12 @@ body {
 	
 	width:100%;
 	margin:20px auto;
-	box-sizing:border-box;
+	
 }
 
 .slides {
 	width:100%;
-	box-sizing:border-box;
+	
 	
 	
 }
@@ -41,8 +41,8 @@ body {
 	
 	
 	width: 1000px;
-	#height:700px;
-	box-sizing:border-box;
+	height:700px;
+	
 	#1450
 	#1040px
 	
