--- a/estilos.css
+++ b/estilos.css
@@ -18,14 +18,15 @@ body {
 	
 	width=100%;
 	max-width:1000px;
-	box-sizing:border-box;
 	
 }
 
 .main{
 	
 	width:100%;
-	margin:20px auto;
+	#margin:20px auto;
+	box-sizing:border-box;
+	
 	
 }
 
