--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,7 @@ body {
 	
 	width=100%;
 	max-width:1000px;
+	text-align:center;
 	
 }
 
@@ -19,6 +20,7 @@ body {
 	width:100%;
 	#margin:20px auto;
 	box-sizing:border-box;
+	text-align:center;
 	
 	
 }
