--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,12 @@
 
+*{
+
+margin:0;
+padding;0;
+
+}
+
+
 body {
 	
 	
@@ -11,16 +19,16 @@ body {
 	
 	width=100%;
 	max-width:1000px;
-	text-align:center;
+	
 	
 }
 
 .main{
 	
 	width:100%;
-	#margin:20px auto;
+	margin:20px auto;
 	box-sizing:border-box;
-	text-align:center;
+	
 	
 	
 }
