--- a/estilos.css
+++ b/estilos.css
@@ -20,6 +20,9 @@ body {
 	width=100%;
 	max-width:1000px;
 	box-sizing:border-box;
+	align-items: center;
+
+	
 	
 }
 
@@ -28,6 +31,8 @@ body {
 	width:100%;
 	margin:20px auto;
 	box-sizing:border-box;
+	 align-items: center;
+
 	
 	
 	
