--- a/estilos.css
+++ b/estilos.css
@@ -22,8 +22,8 @@ body {
 	
 	width:100%;
 	margin:20px auto;
-	
-	 
+        max-width:1000px;
+
 
 	
 	
@@ -42,7 +42,7 @@ body {
 .slides img {
 	
 	
-	width: 1000px;
+	width:1000px;
 	height:700px;
 	 
 
