--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,7 @@ body {
 }
 
 .slides {
-	width:100%;
+	width=100%;
 
 	
 	
@@ -42,7 +42,7 @@ body {
 .slides img {
 	
 	
-	width:1000px;
+	width=1000%;
 	height:700px;
 	 
 
