--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,7 @@ body {
 	
 	
 	width:90%;
-	min-width:1000px;
+	max-width:1000px;
 	margin:20px auto;
         
 
@@ -92,7 +92,7 @@ body {
 	color:#fff;
 	text-decoration:none;
 	display:inline-block;
-	padding:10px  20px;
+	padding:13.5px  20px;
 	float:right;
 	
 }
