--- a/estilos.css
+++ b/estilos.css
@@ -28,8 +28,8 @@ body {
 
 .slides {
 	
-	width:100%;
-	min-width:1000px;
+	width=100%;
+	
 	
 
 	
@@ -41,7 +41,7 @@ body {
 .slides img {
 	
 	
-	width:1000px;
+	width=100%;
 	
         
 	#1450
