--- a/estilos.css
+++ b/estilos.css
@@ -28,7 +28,7 @@ body {
 
 .slides {
 	
-	width=100%;
+	width:1000px;
 	
 	
 
@@ -41,7 +41,7 @@ body {
 .slides img {
 	
 	
-	width=100%;
+	width:1000px;
 	
         
 	#1450
