--- a/estilos.css
+++ b/estilos.css
@@ -28,10 +28,8 @@ body {
 
 .slides {
 	
-	width:1000px;
+	width=100%;
 	
-	
-
 	
 	
 	
@@ -41,7 +39,7 @@ body {
 .slides img {
 	
 	
-	width:1000px;
+	width=100%;
 	
         
 	#1450
