--- a/estilos.css
+++ b/estilos.css
@@ -15,14 +15,14 @@ body {
 
 .main{
 	
-	width=90%;
+	width:90%;
 	min-width:1000px;
 	margin:20px auto;
 	
 }
 
 .slides {
-	width=100%;
+	width:100%;
 	
 	
 }
