--- a/estilos.css
+++ b/estilos.css
@@ -55,7 +55,7 @@ body {
 .slidesjs-pagination  li  a {
 	display: block;
 	padding:13.5px 20px;
-    color:#fff;
+    color:#c0c0c0;
 	text-decoration: none;
 	
 	
@@ -88,7 +88,7 @@ body {
 .slides h1 {
 	
 	text-color:#c0c0c0;
-	color:#fff;
+	color:#c0c0c0;
     text-align: center;
    font-size:70px;
    opacity: 0.5;
