--- a/estilos.css
+++ b/estilos.css
@@ -77,7 +77,7 @@ body {
 .slidesjs-navigation {
 	
 	background: #000;
-	color:#fff;
+	color:#d3d3d3;
 	text-decoration:none;
 	#display:inline-block;
 	float:right;
@@ -87,7 +87,7 @@ body {
 
 .slides h1 {
 	
-	text-color:#c0c0c0;
+	text-color:#d3d3d3;
 	color:#c0c0c0;
     text-align: center;
    font-size:70px;
