--- a/estilos.css
+++ b/estilos.css
@@ -141,7 +141,7 @@ body {
 .slides h1 {
 	
 	text-color:#ffffff;
-	color:#c0c0c0;
+	color:#ffffff;
     text-align: center;
    font-size:70px;
    opacity: 0.5;
