--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,10 @@
-/*Eliminamos los margenes y paddings que agrega el navegador por defecto*/
-* {
+/*Eliminamos los margenes y paddings que agrega el navegador por defecto
+ {
   padding: 0;
   margin: 0;
 }
  
-/*Agregamos margenes inferiores a los parrafos*/
+Agregamos margenes inferiores a los parrafos
 p {
   margin-bottom: 20px;
 }
@@ -17,16 +17,16 @@ header {
 }
 
 nav {
-  float: left; /* Desplazamos el nav hacia la izquierda */
+  float: left; /* Desplazamos el nav hacia la izquierda 
 }
  
 
 nav ul {
   list-style: none;
-  overflow: hidden; /* Limpiamos errores de float */
-}
+  overflow: hidden;  Limpiamos errores de float 
+} */
  
-
+/*
 nav ul li {
   float: left;
   font-family: Arial, sans-serif;
@@ -34,12 +34,12 @@ nav ul li {
 }
  
 nav ul li a {
-  display: block; /* Convertimos los elementos a en elementos bloque para manipular el padding */
+  display: block;  Convertimos los elementos a en elementos bloque para manipular el padding 
   padding: 20px;
   color: #fff;
   text-decoration: none;
-}
- 
+}*/
+/* 
 nav ul li:hover {
   background: #3ead47;
 }
@@ -48,8 +48,8 @@ nav ul li:hover {
 
 .contenido {
   padding-top: 80px;
-}
-
+}  */
+/*
 .wrapper {
   width: 80%;
   margin: auto;
@@ -57,19 +57,19 @@ nav ul li:hover {
 }
 
 
-
+*/
 
 body {
 	
 	
 	background:#000000;
 	margin-left:12em;
-	margin-top:1em;
+	
 }
 
 .main{
 	
-	width:70%;
+	width:80%;
 	min-width:1000px;
 	margin:20px auto;
 	
